# LABORATORY-IA

./: README.md
LLM/ChatDenge/: ChatDenge.py  base_conhecimento.csv  pyproject.toml
LLM/ChatDenge/db/: index.faiss  index.pkl
