[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.10.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-ollama>=0.3.0",
    "pandas>=2.2.3",
]

[dependency-groups]
prod = [
    "ipykernel>=6.29.5",
]
